[package]
name = "homers"
version = "0.0.1"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
build = "build.rs"

[build-dependencies]
git-build-version = "*"

[dependencies]
env_logger = "0.3.2"
log = "0.3.5"

[dependencies.clap]
version = "2"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "color" ]
